2004-04-14 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b38

	* Change: Show Slideshow link and Search only when there is at least one photo.

2004-04-12 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b37

	* Bugfix: Added missing echo in move_photo as the usage of 
		  gallery_error changed from 1.4.3 to 1.4.4.

2004-04-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b36

	* Updated gallery_remote2.php protocol to send hidden state of AlbumItems
	  and only include an a sub-album in a list of items if the sub-album
	  is readable. Also only sending full-size URL if the user is allowed to
	  see it, although that can easily be faked by clients.
	* Bugfix: #932389

2004-04-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b35

	* Change: PHP5 error messages - these errors could have influenced
	  applet behavior due to their nature and location.

2004-04-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b34

	* Change: Extra checks to prevent people from Moving photos into the
	  album they're already in.

2004-04-11 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b33
	
	* Bugfix: #930007

2004-04-11 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b32

	* Bugfix: Added type to makeGalleryURL.
		  This gives the possibility not to load Environment in Popups.
		  This fixes broken Upload Frame Popup in Mambo.

	* Bugfix: Docs Link were broken.

	* Change: Layout Adjustments.

	* New: Gallery will use the Language corresponding to the Country Locale specified by Mambo.

	* New: Added little Gallery <-> Mambo integration HowTo.

2004-04-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b31

	* Fix: Fix unquoted array ref in rename_album.php

	* Bump: Version number from last change

2004-04-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b30

	* Bug 932911: Prevent ( and ) in album names
	  While these can be valid chars, they can cause processing
	  errors.

2004-04-10 Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b29
