@@ -1,3 +1,10 @@
+2004-04-16 Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b39
+
+	* Bugfix: added dirname(__FILE__) and $gallery->app->photoAlbumURL
+		in the appropriate places so that the java applets work
+		properly in embedded environments.  Thanks to Jay Rossiter
+		for the photoAlbumURL part.
+
 2004-04-14 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b38
 
 	* Change: Show Slideshow link and Search only when there is at least one photo.
